--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Laurie Qiu
 
 # Short bio or description (displayed in the header)
-description: 
+description: About all the things I think may be of help to people.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars.githubusercontent.com/u/78013793?v=4
