--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Laurie
+name: Laurie's digital garden
 
 # Short bio or description (displayed in the header)
-description: My digital garden.
+description: :seedling:
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars.githubusercontent.com/u/78013793?v=4
