--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Laurie's digital garden
 
 # Short bio or description (displayed in the header)
-description: -
+description: Undefined yet.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars.githubusercontent.com/u/78013793?v=4
