--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Laurie's digital garden
+name: Laurie's Digital Garden
 
 # Short bio or description (displayed in the header)
 description: Curate and grow.
