--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Laurie's Digital Garden
 description: Curate and grow.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: <svg viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg" width="80" height="80" colors="#260729,#2a2344,#495168,#ccbd9e,#d8ccb2" name="Coretta Scott" size="80"><mask id="mask__beam" maskUnits="userSpaceOnUse" x="0" y="0" width="36" height="36"><rect width="36" height="36" rx="20" fill="white"></rect></mask><g mask="url(#mask__beam)" fill="transparent"><rect width="36" height="36" rx="20" fill="#495168"></rect><rect x="0" y="0" width="36" height="36" transform="translate(9 -5) rotate(199 18 18) scale(1.1)" fill="#d8ccb2" rx="6"></rect><g transform="translate(4.5 -5) rotate(9 18 18)"><path d="M15 20c2 1 4 1 6 0" stroke="black" fill="none" stroke-linecap="round"></path><rect x="10" y="14" width="1.5" height="2" rx="1" stroke="none" fill="black"></rect><rect x="24" y="14" width="1.5" height="2" rx="1" stroke="none" fill="black"></rect></g></g></svg>
+avatar: http://www.w3.org/2000/svg
 
 #
 # Flags below are optional
