--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Laurie's Digital Garden
 description: Curate and grow.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://avatars.githubusercontent.com/u/78013793?s=400&u=52a2e560dbf9812ca2742e63461a554fd21f617c&v=4
+avatar: https://avatars.githubusercontent.com/u/78013793?v=4 
 #
 # Flags below are optional
 #
