--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github:  
+  github: https://github.com/LaurieQiu
   instagram:
   linkedin:
   pinterest:
