--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 name: Laurie's Digital Garden
 
 # Short bio or description (displayed in the header)
-description: Curate, heal, and grow.
+description: Stay determined.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://avatars.githubusercontent.com/u/78013793?v=4 
+avatar: https://avatars.githubusercontent.com/u/78013793?v=4
 #
 # Flags below are optional
 #
