--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: The Shire
 description: Stay determined.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://avatars.githubusercontent.com/u/78013793?v=4
+avatar: https://cdn.pixabay.com/photo/2020/06/10/22/21/hobbiton-5284514_1280.jpg
 #
 # Flags below are optional
 #
