--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: The Shire
+name: a place for thought
 
 # Short bio or description (displayed in the header)
-description: Stay determined.
+description: planting a laurel
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://cdn.pixabay.com/photo/2020/06/10/22/21/hobbiton-5284514_1280.jpg
+avatar: https://avatars.githubusercontent.com/u/78013793?v=4
 #
 # Flags below are optional
 #
